apps/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-teste
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-teste
  template:
    metadata:
      labels:
        app: nginx-teste
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-teste-lb
  namespace: apps
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb   # ou classic/alb se quiser ALB
spec:
  type: LoadBalancer
  selector:
    app: nginx-teste
  ports:
    - port: 80
      targetPort: 80
